Fixed BG image not visible

--- a/styles/_content.scss
+++ b/styles/_content.scss
@@ -1,5 +1,5 @@
 body {
-    background-image: url("/images/bg-tablet-pattern.svg");
+    background-image: url("../images/bg-tablet-pattern.svg");
     background-size: 122%;
     background-repeat: no-repeat;
     background-position: 11vw -28vw;
@@ -45,7 +45,7 @@ body {
     align-items: center;
     padding: 0 1rem 6.5rem 1rem;
     margin-bottom: -0.25rem;
-    background-image: url("/images/bg-tablet-pattern.svg");
+    background-image: url("../images/bg-tablet-pattern.svg");
     background-size: 90%;
     background-repeat: no-repeat;
     background-position: 64vw 21vw;
