--- a/styles/style.css
+++ b/styles/style.css
@@ -27,7 +27,7 @@ ul {
 }
 
 body {
-  background-image: url("/images/bg-tablet-pattern.svg");
+  background-image: url("../images/bg-tablet-pattern.svg");
   background-size: 122%;
   background-repeat: no-repeat;
   background-position: 11vw -28vw;
@@ -91,7 +91,7 @@ body {
           align-items: center;
   padding: 0 1rem 6.5rem 1rem;
   margin-bottom: -0.25rem;
-  background-image: url("/images/bg-tablet-pattern.svg");
+  background-image: url("../images/bg-tablet-pattern.svg");
   background-size: 90%;
   background-repeat: no-repeat;
   background-position: 64vw 21vw;
